--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,7 +44,7 @@
   body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
-    background: var(--second-bg-dark);
+    /* background: var(--second-bg-dark); */
   }
   
   button {
