--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,6 +44,10 @@
   body {
     font-family: 'Poppins', sans-serif;
     font-size: 1.6rem;
+    /* overflow: hidden; */
+    min-height: 100vh;
+    max-height: 100vh;
+    height: 100vh;
     /* background: var(--second-bg-dark); */
   }
   
