--- a/src/App.css
+++ b/src/App.css
@@ -1641,3 +1641,24 @@
     }
   }
   
+
+.str-chat__typing-indicator {
+  display: none !important;
+}
+
+.str-chat__input-flat{
+  position: absolute !important;
+  bottom: 0;
+  right: 0;
+  /* display: none; */
+  width: calc(100% - 250px) !important;
+}
+
+.str-chat__ul:last-child{
+  padding-bottom: 400rem !important;
+}
+
+.str-chat__li:last-child{
+  padding-bottom: 10rem !important;
+
+}
