--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,7 +3,7 @@
     --second-bg: #fafafb;
     --txt-color: #455560;
     --txt-white: #fff;
-    --main-color: #349eff;
+    --main-color: #4169e1;
     --second-color: #62b4ff;
     --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   
@@ -17,7 +17,7 @@
     --txt-color-dark: #bbbbbb;
     --box-shadow-dark: rgba(0, 0, 0, 0.2) 0px 5px 10px;
   
-    --main-color-blue: #349eff;
+    --main-color-blue: #4169e1;
     --second-color-blue: #62b4ff;
   
     --main-color-red: #fb0b12;
