--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -502,3 +502,87 @@ footer{
   font-weight: 600;
   font-size: 1.6rem;
 }
+
+.data-card{
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.data-card i{
+  font-size: 4rem;
+}
+
+.data-card span{
+  display: flex;
+  flex-direction: column;
+}
+
+.data-card p{
+  font-size: 1.4rem;
+}
+
+.note-item{
+  width: 100%;
+  min-height: 90px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.04);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding:1rem;
+  transition: .5s;
+}
+
+.note-item:first-child{
+  margin-top: 1rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.04);
+}
+
+.note-item h2{
+  font-size: 1.4rem;
+}
+.note-item span{
+  font-size: 1.2rem;
+}
+
+.note__sidebar{
+  background-color: rgba(0, 0, 0, 0.3);
+  margin-left: -1.4rem;
+  overflow: scroll;
+
+}
+
+
+.note-item:hover{
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+
+.notes-length{
+  padding: 0 1rem;
+}
+
+.form-group-post{
+  width: 100%;
+}
+
+.form-group-post input{
+  background-color: transparent;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.6rem;
+  color: #f2f6fa;
+}
+
+.form-group-post select{
+  background-color: transparent;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.6rem;
+  border: none;
+  color: #f2f6fa;
+}
+
+.rdw-editor-main{
+  height: 100vh;
+}
