--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -101,6 +101,9 @@
       padding: 1.5rem;
     }
 
+    .form-post input{
+      color: #000;
+    }
 
     .form-post select{
       color: #000;
@@ -110,3 +113,7 @@
     .form-post input::placeholder{
       color: rgba(0, 0, 0, .7);
     }
+
+.img-preview{
+  max-width: 100px;
+}
