--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -431,9 +431,12 @@
 }
 
 .container__home{
+  width: 100%;
   margin-top: 3rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   gap: 2rem;
+  justify-content: space-between;
 }
 
 footer{
@@ -508,7 +511,8 @@ footer{
 .data-card{
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
+  max-height: 100px;
 }
 
 .data-card i{
